--- a/Aufgaben/02-EventInspector/UI.css
+++ b/Aufgaben/02-EventInspector/UI.css
@@ -23,7 +23,16 @@ div {
 
 #spanA {
     position: fixed;
-    height: 200px;
-    width: 300px;
+    height: auto;
+    width: auto;
+    padding: 6px;
     background-color: #165a1d;
+    visibility: hidden;
+}
+
+button {
+    width: 60px;
+    height: 50px;
+    align-self: center;
+    margin: auto;
 }
