--- a/Aufgaben/03-Einkaufsliste/style.css
+++ b/Aufgaben/03-Einkaufsliste/style.css
@@ -1,109 +1,119 @@
 body {
     background-color: #303646;
     margin: 0px;
-    width: 1440px;
-    height: 1024px;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
-    margin: 20px;
+    font-size: 2vw;
+}
+
+p {
+    font-size: 1.5vw;
+}
+
+.title {
+    display: inline-flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    align-items: center;
 }
 
 .nav {
-    background-color: #826334;
-    width: 1440px;
+    background-color: #E09B34;
+    margin: 0px;
+    width: 100%;
     height: 80px;
-    display: flex;
-}
-
-.store {
-    width: 1400px;
-    display: inline-flex;
-    margin: auto;
-}
-
-.shelves {
-    background-color: #a59c8d;
-    margin: 20px;
-    width: 660px;
-    height: 725px;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-.item {
-    background-color: #826334;
-    margin: 10px 20px;
-    width: 620px;
-    height: 65px;
-}
-
-.check {
-    margin: 25px 10px 0px 10px;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-}
-
-.fa-drumstick-bite {
-    margin: 20px 10px 0px 50px;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-}
-
-.name {
-    margin: 10px 10px 0px 100px;
-    position: absolute;
-}
-
-.date {
-    margin: 10px 10px 0px 350px;
-    position: absolute;
-}
-
-.comment {
-    margin: 35px 10px 0px 100px;
-    width: 360px;
-    position: absolute;
-}
-
-.num {
-    margin: 10px 10px 0px 480px;
-    height: 40px;
-    width: 40px;
-    font-size: larger;
-    position: absolute;
-}
-
-.fa-trash-can {
-    margin: 15px 10px 0px 560px;
-    color: #d10f0f;
-    position: absolute;
 }
 
 .stock {
-    background-color: #826334;
-    display: inline-block;
-    margin: 10px 20px;
-    width: 620px;
-    height: 65px;
+    background-color: #948975;
+    width: 95%;
+    height: auto;
+    margin: 20px auto;
+    padding: 10px;
+    display: flex;
 }
 
-.stock .name {
-    margin: 25px 10px 0px 80px;
-    width: 260px;
-    position: absolute;
+.item {
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
 }
 
-.stock .date {
-    margin: 25px 10px 0px 350px;
-    position: absolute;
+.stock .item {
+    margin-top: 10px;
+    display: block;
 }
 
-.stock .fa-drumstick-bite {
-    margin: 20px 10px 0px 20px;
-    width: 20px;
-    height: 20px;
-    position: absolute;
+.submit {
+    background-color: #E09B34;
+    padding: 2px 8px;
+    border-radius: 10px;
+    border-style: hidden;
+}
+
+.name {
+    max-width: 250px;
+    width: 100%;
+}
+
+.num {
+    width: 30px;
+}
+
+.comment {
+    max-width: 200px;
+    width: 100%;
+}
+
+.date {
+    text-align: center;
+    max-width: 60px;
+    width: 100%;
+}
+
+.delete {
+    background-color: #c72020;
+    color: #ffffff;
+    width: 5%;
+    font-size: 1vw;
+    height: auto;
+    text-align: center;
+    padding: 2px 8px;
+    border-radius: 10px;
+    border-style: hidden;
+}
+
+.shelves {
+    background-color: #948975;
+    margin: 20px auto;
+    padding: 10px;
+    width: 95%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.fa-solid {
+    font-size: 1em;
+    position: relative;
+    top: 2px;
+}
+
+.fa-trash-can {
+    color: #c72020;
+}
+
+footer{
+    text-align: center;
+}
+
+footer a {
+    color: #ffffff;
 }
