--- a/Aufgaben/03-Einkaufsliste/style.css
+++ b/Aufgaben/03-Einkaufsliste/style.css
@@ -13,6 +13,10 @@ p {
     font-size: 1.5vw;
 }
 
+label{
+    width: 95%;
+}
+
 .title {
     display: inline-flex;
     justify-content: space-between;
@@ -41,6 +45,7 @@ p {
     width: 100%;
     margin-top: 10px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
     align-items: center;
